--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
     />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" />
 
-    <title>Movie Hub</title>
+    <title>Moviefy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
